Update index.html via Fddly

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dog-website</title>
+    <style>
+        body {
+            font-family: monospace;
+            white-space: pre;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello World</h1>
+    <pre>
+        /^ ^\\
+       / 0 0 \\
+       V\ Y /V
+        / - \\
+        |    \\
+       || (__V
+    </pre>
 </body>
 </html>
